# filemanagement_filemanagement_cangjie_wrapper

./: BUILD.gn  CODEOWNERS  README.md  README_zh.md  bundle.json
kit/CoreFileKit/: BUILD.gn  index.cj
mock/: ohos.file.cj  ohos.file.fileuri.cj  ohos.file.fs.cj  ohos.file.picker.cj  ohos.file.storage_statistics.cj
ohos/file/: BUILD.gn  file_package.cj
ohos/file/fileuri/: BUILD.gn  file_uri.cj
ohos/file/fs/: BUILD.gn  cj_file_fs.cj  conflict_file_exception.cj  file.cj  native.cj  random_access_file.cj  stat.cj  stream.cj
ohos/file/picker/: BUILD.gn  cj_picker.cj  cj_picker_error.cj  cj_picker_ffi.cj  common.cj
ohos/file/storage_statistics/: BUILD.gn  bundle_stats.cj  native.cj  storage_statistics.cj
ohos/file_fileuri/: BUILD.gn  file_uri.cj
ohos/file_fs/: BUILD.gn  cj_file_fs.cj  conflict_file_exception.cj  file.cj  native.cj  random_access_file.cj  stat.cj  stream.cj
test/APILevel21/file_uri/test/entry/src/main/cangjie/src/: Test_fileUri.cj  test_list_file_uri.cj
test/APILevel21/filemanagement/test/entry/src/main/cangjie/src/: Test_filemanagement.cj
test/APILevel22/file_uri/test/entry/src/main/cangjie/src/: Test_fileUri.cj  unittest_engine_pure_trunk.cj
test/APILevel22/filemanagement/test/entry/src/main/cangjie/src/: test_list_filemanagement.cj
test/file_uri/test/entry/src/main/cangjie/src/: Test_fileUri.cj
test/filemanagement/test/entry/src/main/cangjie/src/: Test_filemanagement.cj
